Archive2/51/aa5a663010516c/output
main.cpp: In function 'int main()':
main.cpp:14:40: error: conversion from 'types<char>::type {aka types<char>}' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} _ = reversed<char>::type();
                                        ^
main.cpp:15:46: error: conversion from 'types<int, char>::type {aka types<int, char>}' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} __ = reversed<char, int>::type();
                                              ^
